[package]
name = "permutation_compression"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Marcus <ryan@ryanmarc.us>"]
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitpacking = "0.8.4"
bitvec = "0.22.3"

[dev-dependencies]
rand = "0.8.4"
itertools = "0.10.1"
